{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 422,
  "lineage": "5382142e-2bc2-d1ca-9e56-4ede2953decd",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/loadBalancers/my-loadbalancer/frontendIPConfigurations/my-lb-public",
                "load_balancer_rules": [
                  "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/loadBalancers/my-loadbalancer/loadBalancingRules/http-rule",
                  "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/loadBalancers/my-loadbalancer/loadBalancingRules/ssh-rule"
                ],
                "name": "my-lb-public",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/publicIPAddresses/my-lb-public"
              }
            ],
            "id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/loadBalancers/my-loadbalancer",
            "location": "northeurope",
            "name": "my-loadbalancer",
            "resource_group_name": "training-rg-northEU",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "EndDate": "18.08.2025",
              "ProjectCode": "INTBM999BHD",
              "ProjectName": "AMCloudTraining",
              "ServiceNowID": "RITM0577280"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.my-lb-public",
            "azurerm_resource_group.training"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/networkInterfaces/app-nic1/ipConfigurations/testconfiguration1",
              "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/networkInterfaces/app-nic2/ipConfigurations/testconfiguration2"
            ],
            "id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/loadBalancers/my-loadbalancer/backendAddressPools/vm-backend-pool",
            "loadbalancer_id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/loadBalancers/my-loadbalancer",
            "name": "vm-backend-pool"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.my-lb-public",
            "azurerm_resource_group.training"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/loadBalancers/my-loadbalancer/probes/http-probe",
            "interval_in_seconds": 5,
            "load_balancer_rules": [
              "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/loadBalancers/my-loadbalancer/loadBalancingRules/http-rule"
            ],
            "loadbalancer_id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/loadBalancers/my-loadbalancer",
            "name": "http-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.my-lb-public",
            "azurerm_resource_group.training"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/loadBalancers/my-loadbalancer/probes/ssh-probe",
            "interval_in_seconds": 5,
            "load_balancer_rules": [
              "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/loadBalancers/my-loadbalancer/loadBalancingRules/ssh-rule"
            ],
            "loadbalancer_id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/loadBalancers/my-loadbalancer",
            "name": "ssh-probe",
            "number_of_probes": 2,
            "port": 22,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.my-lb-public",
            "azurerm_resource_group.training"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/loadBalancers/my-loadbalancer/frontendIPConfigurations/my-lb-public",
            "frontend_ip_configuration_name": "my-lb-public",
            "frontend_port": 80,
            "id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/loadBalancers/my-loadbalancer/loadBalancingRules/http-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/loadBalancers/my-loadbalancer",
            "name": "http-rule",
            "probe_id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/loadBalancers/my-loadbalancer/probes/http-probe",
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_probe.http",
            "azurerm_public_ip.my-lb-public",
            "azurerm_resource_group.training"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_port": 22,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/loadBalancers/my-loadbalancer/frontendIPConfigurations/my-lb-public",
            "frontend_ip_configuration_name": "my-lb-public",
            "frontend_port": 22,
            "id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/loadBalancers/my-loadbalancer/loadBalancingRules/ssh-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/loadBalancers/my-loadbalancer",
            "name": "ssh-rule",
            "probe_id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/loadBalancers/my-loadbalancer/probes/ssh-probe",
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_probe.ssh",
            "azurerm_public_ip.my-lb-public",
            "azurerm_resource_group.training"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "training-vm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/networkInterfaces/app-nic1",
            "internal_domain_name_suffix": "trjonj4uvxvexmejtlbqrkcv1b.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testconfiguration1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/publicIPAddresses/my-vm-public1",
                "subnet_id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/virtualNetworks/training-vnet/subnets/app-subnet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northeurope",
            "mac_address": "7C-ED-8D-2C-01-AF",
            "name": "app-nic1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "training-rg-northEU",
            "virtual_machine_id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Compute/virtualMachines/app-vm1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "app-nic1",
            "resource_group_name": "training-rg-northEU",
            "subscription_id": "dbe857d8-f7ea-4c79-bb59-b4e5bc080426"
          },
          "dependencies": [
            "azurerm_public_ip.my-vm-public1",
            "azurerm_resource_group.training",
            "azurerm_subnet.sub1",
            "azurerm_virtual_network.training"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "training-vm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/networkInterfaces/app-nic2",
            "internal_domain_name_suffix": "trjonj4uvxvexmejtlbqrkcv1b.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testconfiguration2",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/publicIPAddresses/my-vm-public2",
                "subnet_id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/virtualNetworks/training-vnet/subnets/app-subnet2"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northeurope",
            "mac_address": "7C-1E-52-FB-22-B4",
            "name": "app-nic2",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "training-rg-northEU",
            "virtual_machine_id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Compute/virtualMachines/app-vm2"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "app-nic2",
            "resource_group_name": "training-rg-northEU",
            "subscription_id": "dbe857d8-f7ea-4c79-bb59-b4e5bc080426"
          },
          "dependencies": [
            "azurerm_public_ip.my-vm-public2",
            "azurerm_resource_group.training",
            "azurerm_subnet.sub2",
            "azurerm_virtual_network.training"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "vm1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/loadBalancers/my-loadbalancer/backendAddressPools/vm-backend-pool",
            "id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/networkInterfaces/app-nic1/ipConfigurations/testconfiguration1|/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/loadBalancers/my-loadbalancer/backendAddressPools/vm-backend-pool",
            "ip_configuration_name": "testconfiguration1",
            "network_interface_id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/networkInterfaces/app-nic1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.backend",
            "azurerm_network_interface.training-vm1",
            "azurerm_public_ip.my-lb-public",
            "azurerm_public_ip.my-vm-public1",
            "azurerm_resource_group.training",
            "azurerm_subnet.sub1",
            "azurerm_virtual_network.training"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "vm2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/loadBalancers/my-loadbalancer/backendAddressPools/vm-backend-pool",
            "id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/networkInterfaces/app-nic2/ipConfigurations/testconfiguration2|/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/loadBalancers/my-loadbalancer/backendAddressPools/vm-backend-pool",
            "ip_configuration_name": "testconfiguration2",
            "network_interface_id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/networkInterfaces/app-nic2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.backend",
            "azurerm_network_interface.training-vm2",
            "azurerm_public_ip.my-lb-public",
            "azurerm_public_ip.my-vm-public2",
            "azurerm_resource_group.training",
            "azurerm_subnet.sub2",
            "azurerm_virtual_network.training"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/networkSecurityGroups/vm1-security-group",
            "location": "northeurope",
            "name": "vm1-security-group",
            "resource_group_name": "training-rg-northEU",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "128.77.15.12",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH-Probe-From-LB",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "EndDate": "18.08.2025",
              "ProjectCode": "INTBM999BHD",
              "ProjectName": "AMCloudTraining",
              "ServiceNowID": "RITM0577280",
              "owner": "ipaun"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "vm1-security-group",
            "resource_group_name": "training-rg-northEU",
            "subscription_id": "dbe857d8-f7ea-4c79-bb59-b4e5bc080426"
          },
          "dependencies": [
            "azurerm_resource_group.training"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/networkSecurityGroups/vm2-security-group",
            "location": "northeurope",
            "name": "vm2-security-group",
            "resource_group_name": "training-rg-northEU",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "128.77.15.12",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH-Probe-From-LB",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "EndDate": "18.08.2025",
              "ProjectCode": "INTBM999BHD",
              "ProjectName": "AMCloudTraining",
              "ServiceNowID": "RITM0577280",
              "owner": "ipaun"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "vm2-security-group",
            "resource_group_name": "training-rg-northEU",
            "subscription_id": "dbe857d8-f7ea-4c79-bb59-b4e5bc080426"
          },
          "dependencies": [
            "azurerm_resource_group.training"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "my-lb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/publicIPAddresses/my-lb-public",
            "idle_timeout_in_minutes": 4,
            "ip_address": "98.71.96.136",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "my-lb-public",
            "resource_group_name": "training-rg-northEU",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "EndDate": "18.08.2025",
              "ProjectCode": "INTBM999BHD",
              "ProjectName": "AMCloudTraining",
              "ServiceNowID": "RITM0577280"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.training"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "my-vm-public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/publicIPAddresses/my-vm-public1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "134.149.57.33",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "my-vm-public1",
            "resource_group_name": "training-rg-northEU",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "EndDate": "18.08.2025",
              "ProjectCode": "INTBM999BHD",
              "ProjectName": "AMCloudTraining",
              "ServiceNowID": "RITM0577280"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.training"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "my-vm-public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/publicIPAddresses/my-vm-public2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "134.149.41.39",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "my-vm-public2",
            "resource_group_name": "training-rg-northEU",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "EndDate": "18.08.2025",
              "ProjectCode": "INTBM999BHD",
              "ProjectName": "AMCloudTraining",
              "ServiceNowID": "RITM0577280"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.training"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/virtualNetworks/training-vnet/subnets/app-subnet1",
            "name": "app-subnet1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "training-rg-northEU",
            "virtual_network_name": "training-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "app-subnet1",
            "resource_group_name": "training-rg-northEU",
            "subscription_id": "dbe857d8-f7ea-4c79-bb59-b4e5bc080426",
            "virtual_network_name": "training-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.training",
            "azurerm_virtual_network.training"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/29"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/virtualNetworks/training-vnet/subnets/app-subnet2",
            "name": "app-subnet2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "training-rg-northEU",
            "virtual_network_name": "training-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "app-subnet2",
            "resource_group_name": "training-rg-northEU",
            "subscription_id": "dbe857d8-f7ea-4c79-bb59-b4e5bc080426",
            "virtual_network_name": "training-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.training",
            "azurerm_virtual_network.training"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/virtualNetworks/training-vnet/subnets/app-subnet1",
            "network_security_group_id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/networkSecurityGroups/vm1-security-group",
            "subnet_id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/virtualNetworks/training-vnet/subnets/app-subnet1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.vm1",
            "azurerm_resource_group.training",
            "azurerm_subnet.sub1",
            "azurerm_virtual_network.training"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/virtualNetworks/training-vnet/subnets/app-subnet2",
            "network_security_group_id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/networkSecurityGroups/vm2-security-group",
            "subnet_id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/virtualNetworks/training-vnet/subnets/app-subnet2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.vm2",
            "azurerm_resource_group.training",
            "azurerm_subnet.sub2",
            "azurerm_virtual_network.training"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "training",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a7e6529c-add4-4bea-b089-9ac308a855d9",
            "id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/virtualNetworks/training-vnet",
            "location": "northeurope",
            "name": "training-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "training-rg-northEU",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.0.0/29"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/virtualNetworks/training-vnet/subnets/app-subnet2",
                "name": "app-subnet2",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/networkSecurityGroups/vm2-security-group"
              },
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/virtualNetworks/training-vnet/subnets/app-subnet1",
                "name": "app-subnet1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/dbe857d8-f7ea-4c79-bb59-b4e5bc080426/resourceGroups/training-rg-northEU/providers/Microsoft.Network/networkSecurityGroups/vm1-security-group"
              }
            ],
            "tags": {
              "EndDate": "18.08.2025",
              "ProjectCode": "INTBM999BHD",
              "ProjectName": "AMCloudTraining",
              "ServiceNowID": "RITM0577280",
              "owner": "ipaun"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "training-vnet",
            "resource_group_name": "training-rg-northEU",
            "subscription_id": "dbe857d8-f7ea-4c79-bb59-b4e5bc080426"
          },
          "dependencies": [
            "azurerm_resource_group.training"
          ]
        }
      ]
    }
  ]
}